==> cookj273/MODBUS/example/ATUC256L3U/modbus_port.c <==
#include <asf.h>
#include "modbus_port.h"

bool modbus_port_init(uint8_t port, uint32_t baudRate, uint8_t charSize, modbus_parity parity, uint8_t stopBits, uint16_t timeoutBits,
                      void (*rxCallback)(uint8_t port), void (*txCallback)(uint8_t port), void (*timeoutCallback)(uint8_t port))
{
    //We only have one port!
    if(port != MB_PORT_NUM) {
        return false;
    }

    // Setup the modbus UART options
    usart_options_t modbusOptions = {
        .baudrate = baudRate,
        .charlength = charSize,
        .paritytype = ((parity == MODBUS_PARITY_EVEN)?USART_EVEN_PARITY:((parity == MODBUS_PARITY_ODD)?USART_ODD_PARITY:USART_NO_PARITY)),
        .stopbits = ((stopBits == 2)?USART_2_STOPBITS:USART_1_STOPBIT),
        .channelmode = USART_NORMAL_CHMODE
    } ;

    // Enable the Uart clock and the timer clock
    sysclk_enable_peripheral_clock(BOARD_MODBUS_USART);

    //Make all pins input for now so they get pulled externally to disabled states
    gpio_configure_pin(BOARD_MODBUS_RX_ENABLE,GPIO_DIR_INPUT);
    gpio_configure_pin(BOARD_MODBUS_TX_ENABLE,GPIO_DIR_INPUT);
    gpio_configure_pin(BOARD_MODBUS_TX,GPIO_DIR_INPUT);
    gpio_configure_pin(BOARD_MODBUS_RX,GPIO_DIR_INPUT);
    curTxEnable = false;
    curRxEnable = false;

    //Bind our callbacks
    rxIntFunc = rxCallback;
    txIntFunc = txCallback;
    timeoutIntFunc = timeoutCallback;

    //Register our interrupt handler
    Disable_global_interrupt();
    inInterrupt = false;
    INTC_register_interrupt(&modbus_irq_handler, BOARD_MODBUS_IRQ, MODBUS_INT_PRIORITY);
    Enable_global_interrupt();

    //Initialize the USART
    if(usart_init_rs232(BOARD_MODBUS_USART, &modbusOptions, sysclk_get_pba_hz()) == USART_SUCCESS) {
        //Init the port states
        uint32_t initVal = 0;
        usartIntState = *((avr32_usart_ier_t *)&initVal);
        modbus_port_serial_enable(port,false,false);
        usart_set_rx_timeout(BOARD_MODBUS_USART, timeoutBits);

        return true;
    }

    //We failed so disable the peripherial clocks if not used elsewhere
    sysclk_disable_peripheral_clock(BOARD_MODBUS_USART);

    return false;
}

void modbus_port_serial_enable(uint8_t port, bool rxEnable, bool txEnable)
{
    const gpio_map_t MODBUS_GPIO_MAP = {
        {BOARD_MODBUS_RX, BOARD_MODBUS_RX_FUNC},    //!< SPI Clock.
        {BOARD_MODBUS_TX, BOARD_MODBUS_TX_FUNC},    //!< MISO.
    };

    bool globIntEnabled = Is_global_interrupt_enabled();

    //We only have one port, if not it then abort
    if(port != MB_PORT_NUM) {
        return;
    }

    //Get out of power save
    if((!curRxEnable && !curTxEnable) && (rxEnable || txEnable)) {
        //We are moving from power save to on, redo the pins
        gpio_enable_module(MODBUS_GPIO_MAP, sizeof(MODBUS_GPIO_MAP) / sizeof(MODBUS_GPIO_MAP[0]));
    }

    //If we interrupt while we have our flags off all hell will break loose
    if(globIntEnabled) {
        Disable_global_interrupt();
    }

    //Reset all our int flags
    usartIntState.usart_mode.rxrdy = 0;
    usartIntState.usart_mode.txrdy = 0;
    usartIntState.usart_mode.txempty = 0;

    if(!txEnable || rxEnable) {
        usart_enable_tx(BOARD_MODBUS_USART, false);
        gpio_configure_pin(BOARD_MODBUS_TX_ENABLE,GPIO_DIR_INPUT);
    }

    if(!rxEnable) {
        usart_enable_rx(BOARD_MODBUS_USART, false);
        gpio_configure_pin(BOARD_MODBUS_RX_ENABLE,GPIO_DIR_INPUT);
    }

    //Set the RX up
    if(rxEnable) {
        //Configure the USART rx interrupt
        usartIntState.usart_mode.rxrdy = 1;
        usart_rx_timeout_restart(BOARD_MODBUS_USART, false);
        usart_enable_rx(BOARD_MODBUS_USART, true);
        gpio_configure_pin(BOARD_MODBUS_RX_ENABLE, (GPIO_DIR_OUTPUT | GPIO_INIT_LOW));
    }

    //Set the TX up
    if(txEnable && !rxEnable) {
        //Configure the USART tx interrupt
        usartIntState.usart_mode.txrdy = 1;
        usart_enable_tx(BOARD_MODBUS_USART, true);
        gpio_configure_pin(BOARD_MODBUS_TX_ENABLE, (GPIO_DIR_OUTPUT | GPIO_INIT_HIGH));
    }

    //Setup the interrupts
    usart_configure_interrupts(BOARD_MODBUS_USART, &usartIntState);
    if(globIntEnabled) {
        Enable_global_interrupt();
    }

    //Try to go to power save
    if((curRxEnable || curTxEnable) && (!rxEnable && !txEnable)) {
        //Not transmitting or receiving so disable rx and tx
        gpio_configure_pin(BOARD_MODBUS_TX,GPIO_DIR_INPUT);
        gpio_configure_pin(BOARD_MODBUS_RX,GPIO_DIR_INPUT);
    }

}

void modbus_port_serial_close(uint8_t port)
{
    bool globIntEnabled = Is_global_interrupt_enabled();

    //We only have one port, so if not it then abort
    if(port != MB_PORT_NUM) {
        return;
    }

    //Disable all the interrupts
    if(globIntEnabled) {
        Disable_global_interrupt();
    }
    usartIntState.usart_mode.rxrdy = 0;
    usartIntState.usart_mode.txrdy = 0;
    usartIntState.usart_mode.txempty = 0;
    usart_configure_interrupts(BOARD_MODBUS_USART, &usartIntState);
    if(globIntEnabled) {
        Enable_global_interrupt();
    }

    //Turn off RX and TX
    usart_enable_tx(BOARD_MODBUS_USART, false);
    usart_enable_rx(BOARD_MODBUS_USART, false);

    //Turn all our pins to input to go to power save
    gpio_configure_pin(BOARD_MODBUS_TX,GPIO_DIR_INPUT);
    gpio_configure_pin(BOARD_MODBUS_RX,GPIO_DIR_INPUT);
    gpio_configure_pin(BOARD_MODBUS_TX_ENABLE,GPIO_DIR_INPUT);
    gpio_configure_pin(BOARD_MODBUS_RX_ENABLE,GPIO_DIR_INPUT);

    //Reset the UART
    usart_reset(BOARD_MODBUS_USART);

    //Turn the Clock off
    sysclk_disable_peripheral_clock(BOARD_MODBUS_USART);
}

void modbus_port_notify_of_tx_completion(uint8_t port)
{
    bool globIntEnabled = Is_global_interrupt_enabled();

    //We only have one port, so if not it then abort
    if(port != MB_PORT_NUM) {
        return;
    }

    if(globIntEnabled) {
        Disable_global_interrupt();
    }
    usartIntState.usart_mode.txrdy = 0;
    usartIntState.usart_mode.txempty = 1;
    usart_configure_interrupts(BOARD_MODBUS_USART, &usartIntState);
    if(globIntEnabled) {
        Enable_global_interrupt();
    }
}

void modbus_port_enable_interrupts(uint8_t port, bool enable)
{
    //We only have one port, so if not it then abort
    if(port != MB_PORT_NUM) {
        return;
    }

    //Since all functionality is within the UART interrupt then don't bother
    //disabling if we are in the interrupt routine.
    if(!inInterrupt && enable) {
        Enable_global_interrupt();
    } else if(!inInterrupt) {
        Disable_global_interrupt();
    }
}

bool modbus_port_put_byte(uint8_t port, uint8_t sndByte)
{
    //We only have one port, so if not it then abort
    if(port != MB_PORT_NUM) {
        return false;
    }

    return (usart_putchar(BOARD_MODBUS_USART, sndByte) == USART_SUCCESS);
}

bool modbus_port_get_byte(uint8_t port, uint8_t *getByte)
{
    int inWord;

    //We only have one port, so if not it abort
    if(port != MB_PORT_NUM) {
        return false;
    }

    //Read the character
    int res = usart_read_char(BOARD_MODBUS_USART, &inWord);
    if(res == USART_SUCCESS) {
        *getByte = (inWord & 0x00FF);
        return true;
    } else if(res == USART_RX_ERROR) {
        usart_reset_status(BOARD_MODBUS_USART);
        res = usart_read_char(BOARD_MODBUS_USART, &inWord);
    }

    return false;
}

void modbus_port_timer_enable(uint8_t port, bool enable)
{
    bool globIntEnabled = Is_global_interrupt_enabled();

    //We only have one port if not it abort
    if(port != MB_PORT_NUM) {
        return;
    }

    //Enable or disable as requested
    if(enable) {
        if(!usartIntState.usart_mode.timeout) {
            usart_rx_timeout_restart(BOARD_MODBUS_USART, true);
            usartIntState.usart_mode.timeout = 1;
            usart_configure_interrupts(BOARD_MODBUS_USART, &usartIntState);
        }
        //THIS TIMER auto resets on char received so no need for an ELSE to reload it here
    } else {
        if(globIntEnabled) {
            Disable_global_interrupt();
        }
        usartIntState.usart_mode.timeout = 0;
        usart_configure_interrupts(BOARD_MODBUS_USART, &usartIntState);
        if(globIntEnabled) {
            Enable_global_interrupt();
        }
    }
}
